@@ -1,2 +1,4 @@
 # Tir-Otomasyonu
-JavaFx ile Yazılmış bir tır otomasyon sistemi 
+JavaFx ile Yazılmış bir tır otomasyon sistemi. Yüklemek için Eclipse open new project kısmından girip dosyayı seçin
+daha sonra run configuration tan argumanları --module-path "sizdeki JavaFx lib dosyasının olduğu yer sürümü 21.0.2 olmalı" --add-modules
+javafx.controls,javafx.fxml   bunu arguman lara ekleyip gerekli lib dosyalarını sisteme yükeldikten sonra dosyalardaki sql databaseni de kurduktan sonra çalışacaktır.
